# current-c-backend

./: .env  CLAUDE.md  Cargo.toml
.cargo/: config.toml
docs/: TradeLog.design.md
migrations/: 20251018135844_initial_schema.sql  20251018163204_expand_trades_schema.sql  20251018170651_positions.sql  20251018170832_position_trades.sql
src/: create_app.rs  main.rs  models.rs
src/handlers/: mod.rs  trades.rs
src/services/: api.rs  mod.rs  positions.rs
