[package]
name = "current-c-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["full"] }
sqlx = { version = "0.8.6", features = [ "postgres", "runtime-tokio", "tls-native-tls", "macros", "rust_decimal", "chrono"]}
rust_decimal = "1.33"
chrono = {version = "0.4.42", features=["serde"]}

serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"

dotenvy = "0.15.7"
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"